--- a/Views/ToDoModels/Create.cshtml
+++ b/Views/ToDoModels/Create.cshtml
@@ -17,10 +17,10 @@
                 <input asp-for="todo" class="form-control" />
                 <span asp-validation-for="todo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="completed" class="control-label"></label>
-                <input asp-for="completed" class="form-control" />
-                <span asp-validation-for="completed" class="text-danger"></span>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="completed" /> @Html.DisplayNameFor(model => model.completed)
+                </label>
             </div>
             <div class="form-group">
                 <label asp-for="userId" class="control-label"></label>
