--- a/Views/ToDoModels/Edit.cshtml
+++ b/Views/ToDoModels/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form  method="post" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <div class="form-group">
@@ -18,10 +18,10 @@
                 <input asp-for="todo" class="form-control" />
                 <span asp-validation-for="todo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="completed" class="control-label"></label>
-                <input asp-for="completed" class="form-control" />
-                <span asp-validation-for="completed" class="text-danger"></span>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="completed" /> @Html.DisplayNameFor(model => model.completed)
+                </label>
             </div>
             <div class="form-group">
                 <label asp-for="userId" class="control-label"></label>
