--- a/Views/ToDoModels/Details.cshtml
+++ b/Views/ToDoModels/Details.cshtml
@@ -11,26 +11,26 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.todo)
+            @Html.DisplayNameFor(model => model.ToDo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.todo)
+            @Html.DisplayFor(model => model.ToDo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.completed)
+            @Html.DisplayNameFor(model => model.Completed)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.completed)
+            @Html.DisplayFor(model => model.Completed)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.userId)
+            @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.userId)
+            @Html.DisplayFor(model => model.UserId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
